really annoying templating problem

--- a/checkin/views/admin.html
+++ b/checkin/views/admin.html
@@ -177,7 +177,7 @@ badge.</h3>
     <h3>Each booth should have a single booth account shared between all of the exhibitors
      working at that booth.</h3>
      <h4>Note: Upload files should be CSV formatted with a header row</h4>
-     <h4>Header Row Example: DisplayName,Username,Category,VendorName,Password,Admin </h4>
+     <h4>Header Row Example: DisplayName,Username,Category,Password,Admin </h4>
 
     <button type="button" class="btn btn-primary navbar-btn btn-lg" data-toggle="modal" data-target="#addBoothModal">Create New Booth</button>
 
