--- a/checkin/views/student.html
+++ b/checkin/views/student.html
@@ -9,7 +9,7 @@
 {% endif %}
 
 {% if raffle_entries == 0 %}
-  <h3>You have no raffle entries yet.</h3>
+  <h3>You haven't unlocked any entries in the prize drawing yet.</h3>
 {% else %}
   {% if raffle_entries == 1 %}
     <h3>You have 1 raffle entry so far.</h3>
