strings and formatting in student view

--- a/checkin/views/student.html
+++ b/checkin/views/student.html
@@ -10,36 +10,36 @@
 
 {% if raffle_entries >= max_raffle_entries and max_raffle_entries != 0 %}
   {% if max_raffle_entries == 1 %}
-      <h3>Congratulations! You've unlocked the {{ raffle_entries }} available entry into the prize drawing! Good luck!</h3>
+      <h3>Congratulations! You've unlocked your entry into the prize drawing! Good luck!</h3>
   {% else %}
-      <h3>Congratulations! You've unlocked the {{ raffle_entries }} available entries into the prize drawing! Good luck!</h3>
+      <h3>Congratulations! You've unlocked all {{ raffle_entries }} available entries for the prize drawing! Good luck!</h3>
   {% endif %}
 {% else %}
   {% if raffle_entries == 0 %}
-    <h3>You haven't unlocked any entries in the prize drawing yet.</h3>
+    <h3>You haven't unlocked any entries for the prize drawing yet.</h3>
   {% else %}
     {% if raffle_entries == 1 %}
-      <h3>You've unlocked 1 entry into the prize drawing so far.</h3>
+      <h3>You've unlocked 1 entry into for prize drawing so far.</h3>
     {% else %}
-      <h3>You've unlocked {{ raffle_entries }} entries into the prize drawing so far.</h3>
+      <h3>You've unlocked {{ raffle_entries }} entries for the prize drawing so far.</h3>
     {% endif %}
   {% endif %}
 
 {% if or_rules|length > 0 or and_rules|length > 0 %}
-  <h3>Do this to unlock your next prize drawing!</h3>
+  <h3>To unlock an entry in the drawing:</h3>
 {% endif %}
   {% for or_rule in or_rules %}
     {% if forloop.counter == 1 %}
       {% if or_rule.category == 'ANY' %}
         <h2>Scan your badge at {{ or_rule.num_checkins }} booths from any category.</h2>
       {% else %}
-        <h2>Scan your badge at {{ or_rule.num_checkins }} booths from the {{ or_rule.category}} category.</h2>
+        <h2>Scan your badge at {{ or_rule.num_checkins }} booths from the <strong>{{ or_rule.category}}</strong> category.</h2>
       {% endif %}
     {% else %}
       {% if or_rule.category == 'ANY' %}
-        <h2>Or scan your badge at {{ or_rule.num_checkins }} booths from any category.</h2>
+        <h2><strong>Or</strong><br>Scan your badge at {{ or_rule.num_checkins }} booths from any category.</h2>
       {% else %}
-        <h2>Or scan your badge at {{ or_rule.num_checkins }} booths from the {{ or_rule.category}} category.</h2>
+        <h2><strong>Or</strong><br>Scan your badge at {{ or_rule.num_checkins }} booths from the <strong>{{ or_rule.category}}<strong> category.</h2>
       {% endif %}
     {% endif %}
     <div class="progress width-page" style="height: 50px;">
@@ -53,22 +53,22 @@
 
     {% if and_rule.category == 'ANY' %}
       {% if or_rules|length > 0  %}
-        <h2>Or scan your badge at {{ and_rule.num_checkins }} booths from any category.</h2>
+        <h2><strong>Or</strong><br>Scan your badge at {{ and_rule.num_checkins }} booths from any category.</h2>
       {% else %}
         <h2>Scan your badge at {{ and_rule.num_checkins }} booths from any category.</h2>
       {% endif %}
     {% else %}
       {% if or_rules|length > 0  %}
-        <h2>Or scan your badge at {{ and_rule.num_checkins }} booths from the {{ and_rule.category}} category.</h2>
+        <h2><strong>Or</strong><br>Scan your badge at {{ and_rule.num_checkins }} booths from the <strong>{{ and_rule.category}}</strong> category.</h2>
       {% else %}
-        <h2>Scan your badge at {{ and_rule.num_checkins }} booths from the {{ and_rule.category}} category.</h2>
+        <h2>Scan your badge at {{ and_rule.num_checkins }} booths from the <strong>{{ and_rule.category}}</strong> category.</h2>
       {% endif %}
     {% endif %}
   {% else %}
     {% if and_rule.category == 'ANY' %}
-      <h2>And scan your badge at {{ and_rule.num_checkins }} booths from any category.</h2>
+      <h2><strong>And</strong><br>Scan your badge at {{ and_rule.num_checkins }} booths from any category.</h2>
     {% else %}
-      <h2>And scan your badge at {{ and_rule.num_checkins }} booths from the {{ and_rule.category}} category.</h2>
+      <h2><strong>And</strong><br>Scan your badge at {{ and_rule.num_checkins }} booths from the <strong>{{ and_rule.category}}</strong> category.</h2>
     {% endif %}
   {% endif %}
 
